<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInPages.LoginActivity"
    android:background="#ececec">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="168dp"
        android:layout_height="192dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/sinicon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_inTV"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_style"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="15sp"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="15sp"
            android:singleLine="true"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#039489"
            android:text="@string/login_btn"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/forgotPass_btn"
            android:background="@null"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/forgot_password_click_here" />

    </LinearLayout>


</LinearLayout>