<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignupActivity"
    android:background="#ececec">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="168dp"
        android:layout_height="192dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/sinicon"
        android:rotation="180"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >


        <EditText
            android:id="@+id/emailSignup"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_style"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="15sp"
            android:singleLine="true"
            />
        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_style"
            android:hint="Your Name"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="15sp"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/passwordSignup"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="15sp"
            android:singleLine="true"
            />
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_style"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="15sp"
            android:singleLine="true"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="signUp"
            android:layout_marginTop="20dp"
            android:background="#039489"
            android:text="@string/nextBtn" />






    </LinearLayout>


</LinearLayout>