<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signIn_pages.CreateUserPrifileActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="168dp"
        android:layout_height="192dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/sinicon"
        android:rotation="180"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/set_profileTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Profile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/set_profileTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <EditText
                    android:id="@+id/profile_nameET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="4"
                    android:hint="@string/your_name_profileET"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/profile_AgeET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:hint="Age"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">

                <EditText
                    android:id="@+id/profile_telephoneET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="4"
                    android:inputType="number"
                    android:hint="@string/profile_telephoneEThint" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:layout_margin="10dp"
                    android:text="Gender:"/>
                <Spinner
                    android:id="@+id/profile_gender_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="20dp"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/preferencesCbheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/preferences_profile_CB_header"
                    android:textSize="15sp"
                    />
                <CheckBox
                    android:id="@+id/sportCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_sportCB"
                    android:layout_marginStart="25dp"
                    android:layout_below="@id/preferencesCbheader"
                    />

                <CheckBox
                    android:id="@+id/clothingCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/preferencesCbheader"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/sportCB"
                    android:text="@string/profile_clothingCB" />

                <CheckBox
                    android:id="@+id/gadgetsCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sportCB"
                    android:text="@string/profile_gadgetsCB"
                    android:layout_marginStart="25dp"/>
                <CheckBox
                    android:id="@+id/foodCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/clothingCB"
                    android:layout_toEndOf="@+id/sportCB"
                    android:layout_marginStart="20dp"
                    android:text="@string/profile_foodCB"
                    />
            </RelativeLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="submitToServer"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="#039489"
                android:text="@string/profile_confirmBTN" />
        </LinearLayout>


    </ScrollView>



</RelativeLayout>